objects/Dealership_Note__c.object
<CustomObject>
    <description>Dealership notes/comments associated with a Title case. This object is related to Digital Titles.</description>
    <fields>
        <fullName>Note_Author__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Note Author is Contac.ID__c from the Seller Dealership. All the notes will be from the Seller.</description>
        <label>Note Author</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Dealership Notes</relationshipLabel>
        <relationshipName>Dealership_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <description>Note Description provided by datahub title/v2 event.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Note</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>Title Name to which this dealership note is associated with.</description>
        <label>Title</label>
        <referenceTo>Title__c</referenceTo>
        <relationshipLabel>Dealership Notes</relationshipLabel>
        <relationshipName>Dealership_Notes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Dealership Note</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Dealership Note Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dealership Notes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>